# KARMA-OpenMedEvalKit

./: .gitignore  README.md  architecture.md  architecture_v2.md  main.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  pypi-publish.yml
.serena/: project.yml
docs/: building-with-llms.md  caching.md  contributing.md  eval-command.md  getting-started.md  index.md  supported-resources.md
docs/api-reference/: cli.md  datasets.md  metrics.md  models.md  registries.md
docs/benchmark/: benchmark_overview.md
docs/stylesheets/: extra.css
docs/user-guide/: adding-datasets-from-huggingface.md  advanced-usage.md  basic-usage.md  cli-basics.md  installation.md  processor-usage.md
docs/user-guide/add-your-own/: add-dataset.md  add-model.md
docs/user-guide/basic-usage/: cli-basics.md  cli-driven-class-inputs.md  index.md  performance-optimization.md  running-evaluations.md
docs/user-guide/datasets/: datasets_overview.md  index.md  overview.md
docs/user-guide/metrics/: index.md  metrics_overview.md  overview.md
docs/user-guide/models/: built-in-models.md  index.md  model-configuration.md  overview.md
docs/user-guide/processors/: index.md  overview.md  processors_overview.md
docs/user-guide/registry/: registries.md
docs_v2/: README.md  astro.config.mjs  package-lock.json  package.json
docs_v2/src/components/: CopyPageButton.astro
docs_v2/src/styles/: global.css
examples/: general_eval_implementation.ipynb  metric_computation.ipynb  qwen_on_pubmedqa.py
karma/: benchmark.py  dataset_registry.py  metrics.py  metrics_registry.py  registry.py
karma/cache/: cache_manager.py  duckdb_cache_io.py  dynamodb_cache_io.py
karma/cli/: main.py  orchestrator.py  output_adapter.py  utils.py
karma/cli/commands/: eval.py  info.py  interactive.py  list.py
karma/cli/formatters/: table.py
karma/data_models/: dataloader_iterable.py  model_meta.py
karma/eval_datasets/: afrimedqa_bias_dataset.py  afrimedqa_dataset.py  amqa_bias_dataset.py  base_dataset.py  calculator_eval_dataset.py  cares_18k_dataset.py  clinical_note_generation_dataset.py  eka_med_asr_dataset.py  eka_medication_sft_validation_set.py  eka_mmlu_medical_dataset.py  eka_nfi_dataset.py  eka_nfi_sft_validation_dataset.py  eka_retrieval_dataset.py  extraction_utils.py  healthbench_dataset.py  in22conv_dataset.py  indian_drug_mcqa_dataset.py  indicvoices.py  indicvoices_r_dataset.py  medcasereasoning_dataset.py  medical_records_parsing_dataset.py  medmcqa_dataset.py  medmcqaindic_dataset.py  medqa_dataset.py  medqa_usmle_dataset.py  medxpertqa_dataset.py  medxpertqa_text_dataset.py  mmlu_medical_datasets.py  nfimcqa_dataset.py  noise-evaluation-dataset.py  patient_safety_bench_dataset.py  pubmedmcqa_dataset.py  slake_dataset.py  vistaar_small.py  vqa_rad_dataset.py
karma/io/: duckdb_io.py
karma/metrics/: asr_metrics.py  asr_wer_preprocessor.py  asr_wer_processor.py  base_metric_abs.py  common_metrics.py  glm_processor.py  healthbench_rubric.py  medcasereasoning_diagnostic_accuracy.py  medcasereasoning_reasoning_recall.py  numeric_tolerance.py  rubric_metric.py  wer_metrics.py
karma/metrics/asr/: asr_metrics.py  (+3 more)
karma/models/: aws_bedrock.py  aws_bedrock_knowledge_retriever.py  base.py  base_hf_llm.py  base_model_abs.py  eleven_labs.py  gemini_asr.py  gemini_llm.py  gemma_hf.py  hf_embedding_model.py  indic_conformer.py  indic_conformer_eka.py  mcp_client.py  medasr.py  medgemma.py  open_ai.py  openai_asr.py  openai_llm.py  parrotlet_v.py  qwen.py  sarvam_asr.py  sarvam_llm.py  whisper.py
karma/preprocessors/: __init__.py  indiclang.py
karma/processors/: asr_wer_processor.py  base.py  general_text_processor.py  indiclang.py  multilingual_text_processor.py
karma/registries/: dataset_registry.py  metrics_registry.py  model_registry.py  processor_registry.py  registry_manager.py
karma/tasks/: MCQA_task.py
karma/utils/: __init__.py  audio.py  auth.py
notebooks/: prepare_stats.ipynb
scripts/: generate_registry_docs.py
tests/: test_dataset_registry.py  test_model_registry.py
(+62 files in other folders)
