[project]
name = "karma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "boto3>=1.35.0",
    "click>=8.0.0",
    "datasets>=3.6.0",
    "duckdb>=0.9.0",
    "evaluate>=0.4.0",
    "indic-transliteration>=2.0.0",
    "ipython>=9.3.0",
    "mysql-connector-python>=9.3.0",
    "pillow>=11.1.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "rich>=13.0.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.3.0",
    "torch>=2.7.1",
    "tqdm>=4.64.0",
    "transformers==4.53.0",
    "weave>=0.50.0",
    "numpy>=2.2.6",
    "librosa>=0.11.0",
    "onnxruntime>=1.22.0",
    "elevenlabs>=2.5.0",
    "google-genai>=1.24.0",
    "pip>=25.1.1",
    "openai>=1.93.0",
    "requests>=2.32.4",
    "jiwer>=4.0.0",
    "num2words>=0.5.14",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

# Install the current package in editable mode
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
karma = "karma.cli.main:main"

[project.optional-dependencies]
audio = [
    "jiwer>=4.0.0",
    "num2words>=0.5.14",
    "torchaudio>=2.7.1",
]
